--- a/aboutus.style.css
+++ b/aboutus.style.css
@@ -64,43 +64,79 @@ header {
 .navbar ul li:hover::after {
     width: 100%;
 }
-.container{
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
-.content-box {
-    border: 1px solid #ccc;
-    padding: 40px;
-    width: 50%;
-    margin: 20px auto;
-    text-align: center;
+.container {
+    max-width: 800px;
+    margin: 50px auto;
+    overflow: hidden;
     background-color: #deaf84;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
-    transition: transform 0.3s ease-in-out;
-}
-
-.content-box:hover {
-    transform: scale(1.02);
-}
-
-.content-box img {
-    width: 100%;
-    height: 50%;
-    margin-bottom: 20px;
-    border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    display: flex;
 }
 
-.content-box p {
-    white-space: pre-line;
-    font-size: 20px;
-    line-height: 1.6;
-    color: #2E1503;
+.description {
+    flex: 1;
+    padding: 20px;
 }
-.content-box{
-    box-sizing: border-box;
-    width: 48%;
-    margin-bottom: 20px;
+
+.description h2 {
+    color: #714423;
+    font-family: 'Instrument Serif';
+}
+
+.description p {
+    color: #714423;
+    font-family: 'Instrument Serif';
+}
+
+.picture {
+    flex: 1;
+    text-align: center;
+    padding: 20px;
+    background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url(cafe.jpg);
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.round-picture {
+    width: 250x;
+    height: 250px;
+    border-radius: 50%;
+    overflow: hidden;
+    margin: 0 auto;
+    object-position: center;
+}
+
+.round-picture img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+footer {
+    background-color: #482913;
+    color: #fff;
+    padding: 50px 0;
+    text-align: center;
+}
+
+.footer-content {
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.footer-content p {
+    margin: 10px 0;
+    font-family: 'Instrument Serif';
+}
+
+.footer-content a {
+    color: #fff;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.footer-content a:hover {
+    text-decoration: underline;
 }
