--- a/contacts.style.css
+++ b/contacts.style.css
@@ -117,16 +117,41 @@ input[type="submit"]:hover {
     background-color: #555;
 }
 .social-icons {
-    display: flex;
+    display: inline-block;
     justify-content: space-around;
     align-items: center;
     margin-top: 20px;
     max-width: 100%; 
     width: 100%;
+    margin-right: 10px;
+    text-align: center;
 }
-
-
 .social-icons a img {
     width: 50px; 
     height: auto;
+    object-position: 0;
+    margin-right: 10px;
+    align-items: center;
+}
+footer {
+    background-color: #482913;
+    color: #fff;
+    padding: 50px 0;
+    text-align: center;
+}
+
+.footer-content {
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.footer-content p {
+    margin: 10px 0;
+    font-family: 'Instrument Serif';
+}
+
+.footer-content a {
+    color: #fff;
+    text-decoration: none;
+    font-weight: bold;
 }
