--- a/partners.style.css
+++ b/partners.style.css
@@ -1,12 +1,17 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+}
+html{
+    margin: 0;
+    padding: 0;
 }
 body {
     background-color: #714423;
     font-family: 'Insturment Serif';
     color: #deaf84;
+    margin: 0;
+    padding: 0;
 }
 
 header {
@@ -108,4 +113,28 @@ h1{
 }
 .image-box:hover .image-caption {
     opacity: 1;
+}
+footer {
+    background-color: #482913;
+    color: #fff;
+    padding: 50px 0;
+    text-align: center;
+    width: 100%;
+    margin: 0;
+}
+
+.footer-content {
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.footer-content p {
+    margin: 10px 0;
+    font-family: 'Instrument Serif';
+}
+
+.footer-content a {
+    color: #fff;
+    text-decoration: none;
+    font-weight: bold;
 }
