--- a/style.css
+++ b/style.css
@@ -72,11 +72,16 @@ button{
     position: relative;
     overflow: hidden;
     font-family: sans-serif;
+    transition: background-color 0.3s, color 0.3s;
 }
 button a{
     color: #deaf84;
     font-family: 'Instrument Serif';
     text-decoration: none;
+}
+button:hover{
+    background-color: #271203;
+    color: #fff; 
 }
 span{
     background-color: #714423;
@@ -87,4 +92,26 @@ span{
     left: 0;
     bottom: 0;
     z-index: -1;
+}
+footer {
+    background-color: #482913;
+    color: #fff;
+    padding: 50px 0;
+    text-align: center;
+}
+
+.footer-content {
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.footer-content p {
+    margin: 10px 0;
+    font-family: 'Instrument Serif';
+}
+
+.footer-content a {
+    color: #fff;
+    text-decoration: none;
+    font-weight: bold;
 }
